--- a/aula de musica/cards.html
+++ b/aula de musica/cards.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/cards.css">
+    <link rel="stylesheet" href="aula de musica/cards.css">
     <link rel="stylesheet" href="/music.js">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
