--- a/aula de musica/index.html
+++ b/aula de musica/index.html
@@ -18,7 +18,7 @@
             </a>
             <a href="/form.html">
             <button type="button" class="btn btn-outline-success">Criar conta</button></a>
-            <a href="/cards.html">
+            <a href="aula de musica/cards.html">
             <button type="button" class="btn btn-outline-success">Cursos</button>
 </a>
         </nav>
