--- a/aula de musica/index.html
+++ b/aula de musica/index.html
@@ -26,7 +26,7 @@
 
       
             <div id="imagem">
-                <img src="/IMAGES/Design sem nome.png" class="img-fluid" alt="imagem responsiva">
+                <img src="./IMAGES/Design sem nome.png" class="img-fluid" alt="imagem responsiva">
             </div>
         </main>
         </div>
