--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./aula de musica/arq.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <title>vmusic</title>
-    <script src="/music.js"></script>
+    <script src="./music.js"></script>
 </head>
 
 <body>
     <main>
         <nav class="gap-2 d-md-flex justify-content-md-end btn cursor-pointer">
-            <a href="/index.html">
+            <a href="./index.html">
             <button  type="button" class="btn btn-outline-success" >Início</button>
             </a>
-            <a href="/form.html">
+            <a href="./form.html">
             <button type="button" class="btn btn-outline-success">Criar conta</button></a>
-            <a href="/cards.html">
+            <a href="./cards.html">
             <button type="button" class="btn btn-outline-success">Cursos</button>
 </a>
         </nav>
@@ -26,7 +26,7 @@
 
       
             <div id="imagem">
-                <img src="/IMAGES/Design sem nome.png" class="img-fluid" alt="imagem responsiva">
+                <img src="./IMAGES/Design sem nome.png" class="img-fluid" alt="imagem responsiva">
             </div>
         </main>
         </div>
@@ -37,7 +37,7 @@
                 </div>
                 <div class="col">
                     <div class="card shadow">
-                        <img src="/IMAGES/casa.png" class="card-img-top" alt="...">
+                        <img src="./IMAGES/casa.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Acesso conveniente</h5>
                             <p class="card-text">As aulas de música online oferecem a conveniência de aprender no
@@ -49,7 +49,7 @@
                 </div>
                 <div class="col">
                     <div class="card shadow">
-                        <img src="/IMAGES/carteira.png" class="card-img-top" alt="...">
+                        <img src="./IMAGES/carteira.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Economia de custos</h5>
                             <p class="card-text">
@@ -61,7 +61,7 @@
                 </div>
                 <div class="col">
                     <div class="card shadow">
-                        <img src="/IMAGES/relogio.png" class="card-img-top" alt="...">
+                        <img src="./IMAGES/relogio.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Flexibilidade de horário</h5>
                             <p class="card-text">Com estas aulas online, você pode ter mais flexibilidade para agendar
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col">
                     <div class="card shadow">
-                        <img src="/IMAGES/monitorar-tablet-e-smartohone.png" class="card-img-top" alt="...">
+                        <img src="./IMAGES/monitorar-tablet-e-smartohone.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Recursos Digitais</h5>
                             <p class="card-text">Variedade de recursos digitais, como vídeos de instrução, partituras
