--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="././aula de musica/arq.css">
-    <link rel="stylesheet" href="./https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href=".././aula de musica/arq.css">
+    <link rel="stylesheet" href="../https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <title>vmusic</title>
-    <script src="./music.js"></script>
+    <script src="../music.js"></script>
 </head>
 
 <body>
@@ -26,7 +26,7 @@
 
       
             <div id="imagem">
-                <img src="./IMAGES/Design sem nome.png" class="img-fluid" alt="imagem responsiva">
+                <img src="../../IMAGES/Design sem nome.png" class="img-fluid" alt="imagem responsiva">
             </div>
         </main>
         </div>
